# galileo

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  copernicus_marimo.py  eval.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dev.sh  single_file_galileo.py  train.py  update_notebook.py  visualizing_embeddings.ipynb  visualizing_embeddings.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
__marimo__/: README.md  visualizing_embeddings.ipynb
config/: normalization.json
config/models/: base.json  nano.json  tiny.json
data/models/nano/: config.json  decoder.pt  encoder.pt  second_decoder.pt  target_encoder.pt
scripts/: README.md  download_test_data.py
src/: collate_fns.py  config.py  data_augmentation.py  embeddings.py  galileo.py  inference.py  loss.py  masking.py  utils.py
src/data/: __init__.py  bbox.py  config.py  copernicus_dataset.py  dataset.py  utils.py
src/data/copernicus/: __init__.py  band_recipes.py  client.py  common.py  download_utils.py  enums.py  galileo_adapter.py  image_processing.py  indices.py  quality.py  s1.py  s2.py  time_series.py  utils.py  visualization.py
src/data/earthengine/: __init__.py  dynamic_world.py  ee_bbox.py  eo.py  era5.py  landscan.py  s1.py  s2.py  srtm.py  terraclimate.py  utils.py  viirs.py  worldcereal.py
src/eval/: __init__.py  eval.py  finetune.py  knn.py  linear_probe.py  metrics.py  norm_ops.py  preprocess.py
src/eval/baseline_models/: __init__.py  croma.py  decur.py  dofa.py  mmearth.py  prithvi.py  satlas.py  satmae.py  softcon.py
src/eval/cropharvest/: __init__.py  bands.py  bbox.py  (+5 more)
tests/: test_augmentation.py  test_config.py  test_copernicus_integration.py  test_copernicus_s2_basic.py  test_copernicus_s2_processing.py  test_cropharvest.py  test_data_utils.py  test_dataset.py  test_end_to_end.py  test_galileo.py  test_inference.py  test_loss.py  test_masking.py  test_product_dedup.py
(+48 files in other folders)
